<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linear_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/fondo">
    <include android:id="@+id/tool" layout="@layout/ly_appbar"/>


    <EditText
        android:id="@+id/text_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="60dp"
        android:layout_marginRight="30dp"
        android:drawablePadding="7dp"
        android:hint="@string/usuario"
        android:inputType="text"
        android:textColor="@color/negro"
        android:textColorHint="@color/negro"
        android:textSize="20sp" />
    <EditText
        android:overScrollMode="always"
        android:scrollbarStyle="insideInset"
        android:scrollbars="vertical"
        android:layout_width="match_parent"
        android:textColorHint="@color/negro"
        android:id="@+id/text_password"
        android:layout_height="50dp"
        android:layout_margin="30dp"
        android:drawablePadding="7dp"
        android:inputType="textPassword"
        android:hint="@string/contrasena"
        android:textColor="@color/negro"
        android:textSize="20sp" />
    <TextView
        android:id="@+id/tv_error"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:visibility="gone"
        android:textColor="@color/blanco"/>
    <Button
        android:id="@+id/button_signin"
        style="@style/button_custom"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="40dp"
        android:layout_marginRight="50dp"
        android:text="@string/sign_in" />

    <Button
        android:id="@+id/btn_register"
        android:layout_marginTop="20dp"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:text="@string/register"
        android:layout_gravity="center"
        style="@style/button_custom"
        />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/or"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="35dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        >

        <ImageButton
            android:id="@+id/twitter_login_button"
            style="@style/button_custom_oval"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_facebook"
            android:layout_marginLeft="45dp"
            android:layout_margin="20dp"
            android:tag="facebook_login_button"
            android:textColor="@color/blanco" />

        <ImageButton
            android:id="@+id/facebook_login_button"
            style="@style/button_custom_oval"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:background="@drawable/ic_twitter"
            android:tag="facebook_login_button"
            android:textColor="@color/blanco" />

        <ImageButton
            android:id="@+id/google_login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_google_plus"
            android:tag="google_login_button"
            android:layout_margin="20dp"
            android:textColor="@color/blanco" />

    </LinearLayout>

</LinearLayout>